# python_from_fortran

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
src/: compare_timings.py
src/adapters/: __init__.py  helpers.py
src/call_py_fort_sample/: field_functions.f90  timing_call_fort_py.f90  timing_module_loading.f90  tryouts.f90
src/cffi_field_sample/: cffi_embedded.py  cffi_fieldplugin_builder.py  field_functions_mod.f90  field_functions_wrapper.py  run_field_sample.f90  timing_cffi.f90
src/cffi_sample/: hello_world_ffi_wrapper.py  run_cffi_sample.c  run_cffi_sample.f90  sample_cffi_wrapper.py
src/ffi_sample/: hello_world_ffi_wrapper.py  test_hello_world.c  test_hello_world.f90
src/forpy_sample/: intro_to_forpy.f90  simple_forpy_example.f90
src/parallel/: README.md  cffi_plugin_builder.py  communicator.py  communicator_plugin_builder.py  dimensions.py  driver.py  driver_builder.py  driver_plugin_builder.py  hello_mpi.py  main.py  mesh.py  operators.py  using_fortran_communicator.py  using_python_communicator.py
src/parallel/fortran/: call_communicator.f90  call_fortran_communicator.f90  call_python_communicator.f90  call_python_driver.f90  communicator.f90  driver.f90  f2py_iso_c_map  main.f90  mpi_helloworld.f90  pycomm_interface.f90
src/python_overhead/: README.md  cpp_functions.f90  fortran_functions_mod.f90  module_loader.py  overhead.csv  plt_result.py  python_functions_mod.f90  python_overhead.f90  timing_cffi_builder.py  timing_python.py
src/python_overhead/gt4py_cache/cwrappers/: CMakeLists.txt  field_copy.cpp  field_copy.cpp.inc  field_copy.h  field_copy_wrapper.cpp  simple.cpp
src/sample_mod/: field_functions.py  my_functions.py
src/scripts/: cffi_timings.csv  compare_timings.py
tests/overhead/: test_overhead.py
tests/parallel/: test_mesh.py  test_operators.py
tests/python_overhead/: test_overhead.py
tests/sample_mod_tests/: test_field_functions.py
