
[metadata]
# This is required for any package to install with a name
name = py4f
# If you want to publish on PyPI then the following are also required
# https://daveshawley.medium.com/safely-using-setup-cfg-for-metadata-1babbe54c108
# Either (author and author_email) or (maintainer and maintainer_email) must be supplied
url =
author =  ETH Zuerich
author_email = magdalena.luz@c2sm.ethz.ch
# This is useful but not required
version = 0.1

# If you are using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
package_dir =
    =src
install_requires =
    cffi>=1.5
[options.packages.find]
where = src
exclude =
    tests